# Project-HERON

./: .env.example  .gitignore  Project-HERON-v3.md  Project-HERON-v4.md  Project-HERON.md  README.md  ROADMAP.md  config.yaml  pyproject.toml  user-reported-bugs.txt
.github/: copilot-instructions.md
.github/instructions/: known-pitfalls.instructions.md  research-layer.instructions.md  trading-safety.instructions.md
.github/prompts/: plan-implementation.prompt.md
docs/: CANONICAL_ARCHITECTURE.md  DOMAIN_MODEL.md  IMPLEMENTATION_PLAN.md  MIGRATION_NOTES.md  ORIENTATION_MEMO.md  UI_INFORMATION_ARCHITECTURE.md
heron/: __main__.py  cli.py  config.py  logging_setup.py  util.py
heron/alerts/: __init__.py  debrief.py  discord.py
heron/backtest/: __init__.py  costs.py  engine.py  fitter.py  parity.py  regimes.py  report.py  runner.py  seeders.py  significance.py  sweep.py  walkforward.py
heron/dashboard/: __init__.py  mode.py
heron/data/: __init__.py  alpaca_market.py  alpaca_news.py  cache.py  earnings.py  rss_news.py  sanitize.py
heron/execution/: __init__.py  alpaca_adapter.py  broker.py  cycle.py  executor.py
heron/journal/: __init__.py  campaigns.py  candidates.py  ops.py  signals.py  strategies.py  trades.py
heron/research/: __init__.py  audit.py  claude.py  (+8 more)
tests/: conftest.py  test_alerts.py  test_audit.py  test_backtest.py  test_cli.py  test_config.py  test_cost_guard.py  test_fitter.py  test_parity.py  test_proposals.py  test_regimes.py  test_resilience.py  test_sweep.py  test_util.py  test_walkforward.py
tools/: capture_dashboard_screenshots.py
(+90 files in other folders)
